# Atari-Combat

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: cmake.yml
include/: bullet.hxx  camera.hxx  font.hxx  game.hxx  glad.h  home.hxx  input.hxx  main.hxx  map.hxx  movement.hxx  obstacle.hxx  player.hxx  powerups.hxx  resourceman.hxx  shader.hxx  shape.hxx  stb_image.h  texture.hxx  uuid.hxx  vehicle.hxx
shaders/: rectangle.fs  rectangle.vs  shader1.vs  shader3.fs  shader3.vs  text.vs
src/: bullet.cxx  font.cxx  game.cxx  glad.c  home.cxx  input.cxx  main.cxx  map.cxx  movement.cxx  obstacle.cxx  player.cxx  powerups.cxx  resourceman.cxx  shader.cxx  shape.cxx  texture.cxx  uuid.cxx  vehicle.cxx
